// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Answer /> should render 1`] = `
.c9:not(:focus):not(:active) {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  padding: 0;
  overflow: hidden;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  border: 0;
}

.c2 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
}

.c2 > *:first-child {
  margin-top: 0;
}

.c2 > *:last-child {
  margin-bottom: 0;
}

.c15 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
  padding: 0;
  max-width: 46.25rem;
}

.c15 > *:first-child {
  margin-top: 0;
}

.c15 > *:last-child {
  margin-bottom: 0;
}

.c26 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
  max-width: 46.25rem;
}

.c26 > *:first-child {
  margin-top: 0;
}

.c26 > *:last-child {
  margin-bottom: 0;
}

.c0 {
  padding: 1.25rem 0;
  background-color: #fff;
}

.c13 {
  padding: 1.25rem 0;
}

.c14 {
  padding: 0.625rem 1.25rem;
  color: #434956;
  border-width: 1px;
  border-style: solid;
  border-radius: 0.25rem;
  border-color: #c9d3df;
  background-color: #fff;
}

.c14 > *:first-child {
  margin-top: 0;
}

.c14 > *:last-child {
  margin-bottom: 0;
}

.c23 {
  padding: 0.625rem 1.25rem;
  color: #434956;
  border-width: 1px;
  border-style: solid;
  border-radius: 0.25rem;
  border-color: #c9d3df;
  background-color: #ebeff3;
}

.c23 > *:first-child {
  margin-top: 0;
}

.c23 > *:last-child {
  margin-bottom: 0;
}

.c38 {
  padding: 0.625rem 1rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border-style: solid;
  border-width: 1px 1px 2px 1px;
  border-radius: 0.25rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  padding: 1rem;
  color: #434956;
  line-height: 0;
  border: none;
}

.c38:hover {
  color: #8c94a6;
}

.c38:active {
  position: relative;
  top: 1px;
}

.c33 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-height: 48px;
  width: 100%;
  background-color: white;
  border-style: solid;
  border-width: 1px;
  border-radius: 0.25rem;
  -webkit-animation: iowhYu 0.3s ease-out;
  animation: iowhYu 0.3s ease-out;
  border-color: #fee5ad;
  box-shadow: 0 5px 10px 0 #c9d3df;
}

.c34 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 1rem;
  background-color: #fee5ad;
}

.c35 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding: 1rem;
  color: #434956;
  text-align: left;
}

.c37 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c16 {
  position: relative;
  margin-bottom: 1.25rem;
}

.c17 {
  position: absolute;
  top: 0.625rem;
  left: calc(-80px - 1.25rem);
  width: 80px;
  color: #4c5467;
}

.c18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c19 {
  color: #4c5467;
  font-weight: 600;
}

.c20 {
  margin-left: 1rem;
  color: #53657d;
  font-size: 0.875rem;
  display: inline-block;
}

.c21 {
  color: #4c5467;
  font-weight: 600;
}

.c22 {
  margin-left: -10px;
}

.c32 {
  position: fixed;
  bottom: 0;
  padding: 1rem;
  width: 100%;
  z-index: 1000;
}

.c36 {
  padding: 0 0.25rem;
}

.c8 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-align: left;
}

.c11 ul {
  z-index: 100;
}

.c11 li[role="option"]:nth-child(2n + 1) {
  background: #f5f7fa;
}

.c1 {
  box-shadow: 0 10px 10px -10px #c9d3df;
}

.c4 {
  margin-top: 0;
  font-size: 1.875rem;
  line-height: 1.4;
  color: #006ab2;
}

.c5 {
  font-size: 1rem;
}

.c3 {
  position: relative;
  padding: 1rem 0;
  text-align: center;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0 auto;
  padding: 0;
  position: relative;
  width: 70%;
}

.c7 {
  position: absolute;
  left: 0;
  top: 0;
  margin: 1rem 0 0 1.25rem;
  width: 1.3rem;
  height: 1.3rem;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0;
  padding: 0 1rem 0 4rem;
  width: 100%;
  height: 50px;
  font-size: inherit;
  font-family: inherit;
  color: inherit;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: #f9f9fc;
  border: 1px solid #c9d3df;
  border-radius: 0.25rem;
  -webkit-transition: border 250ms ease;
  transition: border 250ms ease;
}

.c10:focus {
  border-color: #006be6;
  outline: none;
}

.c12 {
  padding: 0.625rem 1rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border-style: solid;
  border-width: 1px 1px 2px 1px;
  border-radius: 0.25rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  color: #fff;
  background: #006be6;
  border-color: #006be6;
  border-bottom-color: #0053b3;
  margin-left: 0.5rem;
}

.c12:not([disabled]):hover,
.c12:not([disabled]):focus {
  background: #07f;
  color: #fff;
}

.c12:not([disabled]):active {
  color: #fff;
  background: #1a85ff;
  border-width: 2px 1px 1px 1px;
  border-color: #006be6;
  outline: none;
}

.c12[aria-pressed="true"] {
  color: #fff;
  background: #07f;
  border-width: 2px 1px 1px 1px;
  border-color: #006be6;
  border-top-color: #0053b3;
  box-shadow: inset 0 1px 2px 0 #0053b3;
}

.c12[aria-pressed="true"]:not([disabled]):hover,
.c12[aria-pressed="true"]:not([disabled]):focus {
  background-color: #006be6;
}

.c12[aria-pressed="true"]:not([disabled]):active {
  border-top-color: #0053b3;
}

.c12[disabled] {
  cursor: not-allowed;
  color: rgba(255,255,255,0.4);
}

.c27 {
  margin-bottom: 1rem;
}

.c28 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
}

.c30 {
  padding: 0.625rem 1rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border-style: solid;
  border-width: 1px 1px 2px 1px;
  border-radius: 0.25rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  color: #0c0c0e;
  background: #eaeaea;
  border-color: #eaeaea;
  border-bottom-color: #d1d1d1;
  min-width: 7rem;
}

.c30:not([disabled]):hover,
.c30:not([disabled]):focus {
  background: #f7f7f7;
  color: #18181c;
}

.c30:not([disabled]):active {
  color: #242429;
  background: #fff;
  border-width: 2px 1px 1px 1px;
  border-color: #eaeaea;
  outline: none;
}

.c30[aria-pressed="true"] {
  color: #18181c;
  background: #f7f7f7;
  border-width: 2px 1px 1px 1px;
  border-color: #eaeaea;
  border-top-color: #d1d1d1;
  box-shadow: inset 0 1px 2px 0 #d1d1d1;
}

.c30[aria-pressed="true"]:not([disabled]):hover,
.c30[aria-pressed="true"]:not([disabled]):focus {
  background-color: #eaeaea;
}

.c30[aria-pressed="true"]:not([disabled]):active {
  border-top-color: #d1d1d1;
}

.c30[disabled] {
  cursor: not-allowed;
  color: rgba(12,12,14,0.4);
}

.c30 + .c29 {
  margin-left: 1rem;
}

.c31 {
  padding: 0.625rem 1rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border-style: solid;
  border-width: 1px 1px 2px 1px;
  border-radius: 0.25rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  color: #fff;
  background: #006be6;
  border-color: #006be6;
  border-bottom-color: #0053b3;
  min-width: 7rem;
}

.c31:not([disabled]):hover,
.c31:not([disabled]):focus {
  background: #07f;
  color: #fff;
}

.c31:not([disabled]):active {
  color: #fff;
  background: #1a85ff;
  border-width: 2px 1px 1px 1px;
  border-color: #006be6;
  outline: none;
}

.c31[aria-pressed="true"] {
  color: #fff;
  background: #07f;
  border-width: 2px 1px 1px 1px;
  border-color: #006be6;
  border-top-color: #0053b3;
  box-shadow: inset 0 1px 2px 0 #0053b3;
}

.c31[aria-pressed="true"]:not([disabled]):hover,
.c31[aria-pressed="true"]:not([disabled]):focus {
  background-color: #006be6;
}

.c31[aria-pressed="true"]:not([disabled]):active {
  border-top-color: #0053b3;
}

.c31[disabled] {
  cursor: not-allowed;
  color: rgba(255,255,255,0.4);
}

.c31 + .c29 {
  margin-left: 1rem;
}

.c24 {
  margin: 1rem auto;
}

.c25 {
  margin-top: 2.5rem;
  padding: 1rem;
  background-color: #f9f9fc;
  border-radius: 0.25rem;
}

@media print {
  .c2 {
    max-width: 100%;
    padding: 0;
  }
}

@media print {
  .c15 {
    max-width: 100%;
    padding: 0;
  }
}

@media print {
  .c26 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:600px) {
  .c14 {
    padding: 0.625rem 1.25rem;
  }
}

@media print {
  .c14 {
    border: none;
    padding: 0 5pt;
  }
}

@media (max-width:600px) {
  .c23 {
    padding: 0.625rem 1.25rem;
  }
}

@media print {
  .c23 {
    border: none;
    padding: 0 5pt;
  }
}

@media (max-width:1200px) {
  .c17 {
    display: none;
  }
}

@media (max-width:600px) {
  .c18 {
    -webkit-flex-flow: column;
    -ms-flex-flow: column;
    flex-flow: column;
    -webkit-align-items: flex-start;
    -webkit-box-align: flex-start;
    -ms-flex-align: flex-start;
    align-items: flex-start;
  }
}

@media (max-width:600px) {
  .c20 {
    margin-left: 0;
  }
}

@media print {
  .c1 {
    display: none;
  }
}

@media (max-width:980px) {
  .c6 {
    width: 100%;
  }
}

@media (max-width:600px) {
  .c6 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    height: auto;
    width: 100%;
  }
}

@media (max-width:600px) {
  .c7 {
    display: none;
  }
}

@media (max-width:600px) {
  .c10 {
    height: 50px;
    padding: 0 1rem;
  }
}

@media (max-width:600px) {
  .c12 {
    margin-left: 0;
    margin-top: 0.625rem;
  }
}

<div>
  <div
    class="c0 c1"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <p
          class="c4"
        >
          Posez votre question sur le droit du travail
          <br />
          <a
            class="c5"
            href="/droit-du-travail"
          >
            Le droit du travail, c‘est quoi ?
          </a>
        </p>
        <form
          class="c6"
        >
          <svg
            class="c7"
            viewBox="0 0 20 20"
          >
            <title />
            <path
              d="M17.876 8.939c0 2.197-.819 4.208-2.123 5.773l4.023 4.022a.72.72 0 0 1 0 1.043.735.735 0 0 1-.522.223.736.736 0 0 1-.52-.223l-4.023-4.023a8.813 8.813 0 0 1-5.772 2.123C4.022 17.877 0 13.855 0 8.939 0 4.022 4.023 0 8.939 0c4.915 0 8.937 4.023 8.937 8.939zM9.001 16.5c4.124 0 7.499-3.375 7.499-7.5S13.125 1.5 9 1.5C4.877 1.5 1.5 4.875 1.5 9s3.376 7.5 7.5 7.5z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
          <label
            class="c8"
            for="main-search-input"
          >
            <span
              class="c9"
            >
              Rechercher
            </span>
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-owns="react-autowhatever-cdtn-documents-suggester"
              role="combobox"
              style="flex: 1;"
            >
              <input
                aria-autocomplete="list"
                aria-controls="react-autowhatever-cdtn-documents-suggester"
                autocomplete="off"
                class="c10"
                id="main-search-input"
                name="query"
                placeholder="Recherche"
                type="search"
                value=""
              />
              <div
                class="c11"
                id="react-autowhatever-cdtn-documents-suggester"
                role="listbox"
              />
            </div>
          </label>
          <button
            aria-pressed="false"
            class="c12"
            type="submit"
          >
            Rechercher
          </button>
        </form>
      </div>
    </div>
  </div>
  <div
    class="c13"
    data-main-content="true"
  >
    <div
      class="c2"
    >
      <div
        class="c14"
      >
        <div
          class="c13"
        >
          <div
            class="c15 c16"
          >
            <div
              class="c17"
            >
              <svg
                viewBox="0 0 50 50"
              >
                <title>
                  question
                </title>
                <g
                  fill="currentColor"
                  fill-rule="evenodd"
                >
                  <path
                    d="M33.045 30.728a.951.951 0 0 0-.955.946v6.533c0 2.61-2.143 4.733-4.775 4.733H17.003a.951.951 0 0 0-.955.947l-.001 1.882-2.28-2.26a.955.955 0 0 0-.876-.569H6.685c-2.633 0-4.775-2.123-4.775-4.733v-14.58c0-2.61 2.142-4.734 4.775-4.734h9.647a.951.951 0 0 0 .955-.946.951.951 0 0 0-.955-.947H6.685C3 17 0 19.973 0 23.627v14.58c0 3.654 2.999 6.627 6.685 6.627h5.717l3.922 3.889a.96.96 0 0 0 1.04.205.946.946 0 0 0 .59-.874l.003-3.22h9.358C31 44.834 34 41.86 34 38.207v-6.533a.951.951 0 0 0-.955-.946z"
                  />
                  <path
                    d="M35.201 0H32.8C25.189 0 19 6.195 19 13.81s6.19 13.811 13.798 13.811h2.403a13.82 13.82 0 0 0 3.502-.45l3.55 3.551a.949.949 0 0 0 1.62-.672v-5.498a13.942 13.942 0 0 0 3.627-4.475c.995-1.952 1.5-4.06 1.5-6.267C49 6.195 42.81 0 35.201 0zm7.152 23.33a.95.95 0 0 0-.379.76v3.667l-2.323-2.324a.948.948 0 0 0-.95-.236c-1.13.347-2.307.524-3.5.524H32.8c-6.562 0-11.9-5.343-11.9-11.91 0-6.568 5.338-11.91 11.9-11.91H35.2c6.562 0 11.9 5.342 11.9 11.91 0 3.775-1.73 7.245-4.748 9.52z"
                  />
                  <path
                    d="M37.99 10.71a4.005 4.005 0 0 0-3.708-3.7A4 4 0 0 0 30 10.99a.944.944 0 0 0 1.89 0c0-.59.238-1.136.67-1.539a2.099 2.099 0 0 1 1.591-.56 2.109 2.109 0 0 1 1.954 1.948 2.096 2.096 0 0 1-1.641 2.206 1.785 1.785 0 0 0-1.409 1.748v2.264a.944.944 0 0 0 1.89 0V14.87a3.971 3.971 0 0 0 3.045-4.16zM34.707 19.293A1.01 1.01 0 0 0 34 19a1.01 1.01 0 0 0-.707.293A1.008 1.008 0 0 0 33 20c0 .264.107.522.293.708a1.006 1.006 0 0 0 1.414 0A1.01 1.01 0 0 0 35 20c0-.263-.107-.52-.293-.707zM26.048 30H5.952C5.426 30 5 30.448 5 31s.426 1 .952 1h20.096c.526 0 .952-.448.952-1s-.426-1-.952-1zM26.707 35.293A1.007 1.007 0 0 0 26 35c-.263 0-.521.107-.707.293A1.007 1.007 0 0 0 25 36c0 .263.107.521.293.707.186.186.444.293.707.293.263 0 .521-.107.707-.293.186-.186.293-.443.293-.707 0-.263-.107-.521-.293-.707zM23.009 35H5.99A.996.996 0 0 0 5 36c0 .552.444 1 .991 1H23.01A.996.996 0 0 0 24 36c0-.552-.444-1-.991-1zM20.036 25H5.964C5.432 25 5 25.448 5 26s.432 1 .964 1h14.072c.532 0 .964-.448.964-1s-.432-1-.964-1z"
                  />
                </g>
              </svg>
            </div>
            <h1>
              Article du code
            </h1>
            <div
              class="c18"
            >
              <span
                class="c19"
              >
                social groove
              </span>
              <span
                class="c20"
              >
                Mis à jour le : 
                <span
                  class="c21"
                >
                  03/11/1979
                </span>
              </span>
            </div>
            <div
              class="c22"
            />
          </div>
          <div
            class="c15"
          >
            <div
              class="c23 c24"
            >
              intro de l'article
            </div>
            <div>
              <p
                class="test-content"
              >
                Contenu au format 
                <strong>
                  html
                </strong>
              </p>
            </div>
            <div>
              Contenu supplémentaire
            </div>
            <div
              class="c25"
            >
              pied de page
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="c13"
  >
    <div
      class="c26"
    >
      <div
        class="c23"
      >
        <h3
          class="c27"
        >
          Avez-vous trouvé la réponse à votre question ?
        </h3>
        <p
          class="c28"
        >
          <button
            aria-pressed="false"
            class="c29 c30"
          >
            Non
          </button>
          <button
            aria-pressed="false"
            class="c29 c31"
          >
            Oui
          </button>
        </p>
      </div>
    </div>
  </div>
  <div
    class="c32"
  >
    <div
      class="c33"
    >
      <div
        class="c34"
      >
        <svg
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10.29 3.86L1.82 18a2 2 0 0 0 1.71 3h16.94a2 2 0 0 0 1.71-3L13.71 3.86a2 2 0 0 0-3.42 0z"
          />
          <line
            x1="12"
            x2="12"
            y1="9"
            y2="13"
          />
          <line
            x1="12"
            x2="12"
            y1="17"
            y2="17"
          />
        </svg>
      </div>
      <div
        class="c35"
        role="alert"
      >
        Ce site est en cours de construction, la fiabilité des réponses qui s’y trouvent ne sont pas garanties.
        <a
          class="c36"
          href="https://www.legifrance.gouv.fr/affichTexteArticle.do;jsessionid=AE9DCF75DDCF0465784CEE0E7D62729F.tplgfr37s_2?idArticle=JORFARTI000035607420&cidTexte=JORFTEXT000035607388&dateTexte=29990101&categorieLien=id"
          rel="noopener noreferrer"
          target="_blank"
          title="consulter l'ordonance"
        >
          L’ouverture officielle du site
        </a>
        est prévue pour 2020.
      </div>
      <div
        class="c37"
      >
        <button
          aria-label="Fermer"
          aria-pressed="false"
          class="c38"
        >
          <svg
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="18"
              x2="6"
              y1="6"
              y2="18"
            />
            <line
              x1="6"
              x2="18"
              y1="6"
              y2="18"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Answer /> should render a breadcrumbs 1`] = `
.c9:not(:focus):not(:active) {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  padding: 0;
  overflow: hidden;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  border: 0;
}

.c15 {
  margin: 0;
  padding: 0;
  list-style-type: none;
}

.c2 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
}

.c2 > *:first-child {
  margin-top: 0;
}

.c2 > *:last-child {
  margin-bottom: 0;
}

.c19 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
  padding: 0;
  max-width: 46.25rem;
}

.c19 > *:first-child {
  margin-top: 0;
}

.c19 > *:last-child {
  margin-bottom: 0;
}

.c30 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
  max-width: 46.25rem;
}

.c30 > *:first-child {
  margin-top: 0;
}

.c30 > *:last-child {
  margin-bottom: 0;
}

.c0 {
  padding: 1.25rem 0;
  background-color: #fff;
}

.c14 {
  padding: 1.25rem 0;
}

.c18 {
  padding: 0.625rem 1.25rem;
  color: #434956;
  border-width: 1px;
  border-style: solid;
  border-radius: 0.25rem;
  border-color: #c9d3df;
  background-color: #fff;
}

.c18 > *:first-child {
  margin-top: 0;
}

.c18 > *:last-child {
  margin-bottom: 0;
}

.c27 {
  padding: 0.625rem 1.25rem;
  color: #434956;
  border-width: 1px;
  border-style: solid;
  border-radius: 0.25rem;
  border-color: #c9d3df;
  background-color: #ebeff3;
}

.c27 > *:first-child {
  margin-top: 0;
}

.c27 > *:last-child {
  margin-bottom: 0;
}

.c42 {
  padding: 0.625rem 1rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border-style: solid;
  border-width: 1px 1px 2px 1px;
  border-radius: 0.25rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  padding: 1rem;
  color: #434956;
  line-height: 0;
  border: none;
}

.c42:hover {
  color: #8c94a6;
}

.c42:active {
  position: relative;
  top: 1px;
}

.c37 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-height: 48px;
  width: 100%;
  background-color: white;
  border-style: solid;
  border-width: 1px;
  border-radius: 0.25rem;
  -webkit-animation: iowhYu 0.3s ease-out;
  animation: iowhYu 0.3s ease-out;
  border-color: #fee5ad;
  box-shadow: 0 5px 10px 0 #c9d3df;
}

.c38 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 1rem;
  background-color: #fee5ad;
}

.c39 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding: 1rem;
  color: #434956;
  text-align: left;
}

.c41 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c20 {
  position: relative;
  margin-bottom: 1.25rem;
}

.c21 {
  position: absolute;
  top: 0.625rem;
  left: calc(-80px - 1.25rem);
  width: 80px;
  color: #4c5467;
}

.c22 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c23 {
  color: #4c5467;
  font-weight: 600;
}

.c24 {
  margin-left: 1rem;
  color: #53657d;
  font-size: 0.875rem;
  display: inline-block;
}

.c25 {
  color: #4c5467;
  font-weight: 600;
}

.c26 {
  margin-left: -10px;
}

.c36 {
  position: fixed;
  bottom: 0;
  padding: 1rem;
  width: 100%;
  z-index: 1000;
}

.c40 {
  padding: 0 0.25rem;
}

.c8 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-align: left;
}

.c11 ul {
  z-index: 100;
}

.c11 li[role="option"]:nth-child(2n + 1) {
  background: #f5f7fa;
}

.c1 {
  box-shadow: 0 10px 10px -10px #c9d3df;
}

.c4 {
  margin-top: 0;
  font-size: 1.875rem;
  line-height: 1.4;
  color: #006ab2;
}

.c5 {
  font-size: 1rem;
}

.c3 {
  position: relative;
  padding: 1rem 0;
  text-align: center;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0 auto;
  padding: 0;
  position: relative;
  width: 70%;
}

.c7 {
  position: absolute;
  left: 0;
  top: 0;
  margin: 1rem 0 0 1.25rem;
  width: 1.3rem;
  height: 1.3rem;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0;
  padding: 0 1rem 0 4rem;
  width: 100%;
  height: 50px;
  font-size: inherit;
  font-family: inherit;
  color: inherit;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: #f9f9fc;
  border: 1px solid #c9d3df;
  border-radius: 0.25rem;
  -webkit-transition: border 250ms ease;
  transition: border 250ms ease;
}

.c10:focus {
  border-color: #006be6;
  outline: none;
}

.c12 {
  padding: 0.625rem 1rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border-style: solid;
  border-width: 1px 1px 2px 1px;
  border-radius: 0.25rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  color: #fff;
  background: #006be6;
  border-color: #006be6;
  border-bottom-color: #0053b3;
  margin-left: 0.5rem;
}

.c12:not([disabled]):hover,
.c12:not([disabled]):focus {
  background: #07f;
  color: #fff;
}

.c12:not([disabled]):active {
  color: #fff;
  background: #1a85ff;
  border-width: 2px 1px 1px 1px;
  border-color: #006be6;
  outline: none;
}

.c12[aria-pressed="true"] {
  color: #fff;
  background: #07f;
  border-width: 2px 1px 1px 1px;
  border-color: #006be6;
  border-top-color: #0053b3;
  box-shadow: inset 0 1px 2px 0 #0053b3;
}

.c12[aria-pressed="true"]:not([disabled]):hover,
.c12[aria-pressed="true"]:not([disabled]):focus {
  background-color: #006be6;
}

.c12[aria-pressed="true"]:not([disabled]):active {
  border-top-color: #0053b3;
}

.c12[disabled] {
  cursor: not-allowed;
  color: rgba(255,255,255,0.4);
}

.c31 {
  margin-bottom: 1rem;
}

.c32 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
}

.c34 {
  padding: 0.625rem 1rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border-style: solid;
  border-width: 1px 1px 2px 1px;
  border-radius: 0.25rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  color: #0c0c0e;
  background: #eaeaea;
  border-color: #eaeaea;
  border-bottom-color: #d1d1d1;
  min-width: 7rem;
}

.c34:not([disabled]):hover,
.c34:not([disabled]):focus {
  background: #f7f7f7;
  color: #18181c;
}

.c34:not([disabled]):active {
  color: #242429;
  background: #fff;
  border-width: 2px 1px 1px 1px;
  border-color: #eaeaea;
  outline: none;
}

.c34[aria-pressed="true"] {
  color: #18181c;
  background: #f7f7f7;
  border-width: 2px 1px 1px 1px;
  border-color: #eaeaea;
  border-top-color: #d1d1d1;
  box-shadow: inset 0 1px 2px 0 #d1d1d1;
}

.c34[aria-pressed="true"]:not([disabled]):hover,
.c34[aria-pressed="true"]:not([disabled]):focus {
  background-color: #eaeaea;
}

.c34[aria-pressed="true"]:not([disabled]):active {
  border-top-color: #d1d1d1;
}

.c34[disabled] {
  cursor: not-allowed;
  color: rgba(12,12,14,0.4);
}

.c34 + .c33 {
  margin-left: 1rem;
}

.c35 {
  padding: 0.625rem 1rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border-style: solid;
  border-width: 1px 1px 2px 1px;
  border-radius: 0.25rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  color: #fff;
  background: #006be6;
  border-color: #006be6;
  border-bottom-color: #0053b3;
  min-width: 7rem;
}

.c35:not([disabled]):hover,
.c35:not([disabled]):focus {
  background: #07f;
  color: #fff;
}

.c35:not([disabled]):active {
  color: #fff;
  background: #1a85ff;
  border-width: 2px 1px 1px 1px;
  border-color: #006be6;
  outline: none;
}

.c35[aria-pressed="true"] {
  color: #fff;
  background: #07f;
  border-width: 2px 1px 1px 1px;
  border-color: #006be6;
  border-top-color: #0053b3;
  box-shadow: inset 0 1px 2px 0 #0053b3;
}

.c35[aria-pressed="true"]:not([disabled]):hover,
.c35[aria-pressed="true"]:not([disabled]):focus {
  background-color: #006be6;
}

.c35[aria-pressed="true"]:not([disabled]):active {
  border-top-color: #0053b3;
}

.c35[disabled] {
  cursor: not-allowed;
  color: rgba(255,255,255,0.4);
}

.c35 + .c33 {
  margin-left: 1rem;
}

.c13 {
  background: #d7e8f9;
}

.c16 {
  display: inline-block;
  padding: 0.625rem 1.25rem;
}

.c16:first-child {
  padding-left: 0;
}

.c17 {
  display: inline-block;
  pointer-events: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c28 {
  margin: 1rem auto;
}

.c29 {
  margin-top: 2.5rem;
  padding: 1rem;
  background-color: #f9f9fc;
  border-radius: 0.25rem;
}

@media print {
  .c2 {
    max-width: 100%;
    padding: 0;
  }
}

@media print {
  .c19 {
    max-width: 100%;
    padding: 0;
  }
}

@media print {
  .c30 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:600px) {
  .c18 {
    padding: 0.625rem 1.25rem;
  }
}

@media print {
  .c18 {
    border: none;
    padding: 0 5pt;
  }
}

@media (max-width:600px) {
  .c27 {
    padding: 0.625rem 1.25rem;
  }
}

@media print {
  .c27 {
    border: none;
    padding: 0 5pt;
  }
}

@media (max-width:1200px) {
  .c21 {
    display: none;
  }
}

@media (max-width:600px) {
  .c22 {
    -webkit-flex-flow: column;
    -ms-flex-flow: column;
    flex-flow: column;
    -webkit-align-items: flex-start;
    -webkit-box-align: flex-start;
    -ms-flex-align: flex-start;
    align-items: flex-start;
  }
}

@media (max-width:600px) {
  .c24 {
    margin-left: 0;
  }
}

@media print {
  .c1 {
    display: none;
  }
}

@media (max-width:980px) {
  .c6 {
    width: 100%;
  }
}

@media (max-width:600px) {
  .c6 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    height: auto;
    width: 100%;
  }
}

@media (max-width:600px) {
  .c7 {
    display: none;
  }
}

@media (max-width:600px) {
  .c10 {
    height: 50px;
    padding: 0 1rem;
  }
}

@media (max-width:600px) {
  .c12 {
    margin-left: 0;
    margin-top: 0.625rem;
  }
}

<div>
  <div
    class="c0 c1"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <p
          class="c4"
        >
          Posez votre question sur le droit du travail
          <br />
          <a
            class="c5"
            href="/droit-du-travail"
          >
            Le droit du travail, c‘est quoi ?
          </a>
        </p>
        <form
          class="c6"
        >
          <svg
            class="c7"
            viewBox="0 0 20 20"
          >
            <title />
            <path
              d="M17.876 8.939c0 2.197-.819 4.208-2.123 5.773l4.023 4.022a.72.72 0 0 1 0 1.043.735.735 0 0 1-.522.223.736.736 0 0 1-.52-.223l-4.023-4.023a8.813 8.813 0 0 1-5.772 2.123C4.022 17.877 0 13.855 0 8.939 0 4.022 4.023 0 8.939 0c4.915 0 8.937 4.023 8.937 8.939zM9.001 16.5c4.124 0 7.499-3.375 7.499-7.5S13.125 1.5 9 1.5C4.877 1.5 1.5 4.875 1.5 9s3.376 7.5 7.5 7.5z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
          <label
            class="c8"
            for="main-search-input"
          >
            <span
              class="c9"
            >
              Rechercher
            </span>
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-owns="react-autowhatever-cdtn-documents-suggester"
              role="combobox"
              style="flex: 1;"
            >
              <input
                aria-autocomplete="list"
                aria-controls="react-autowhatever-cdtn-documents-suggester"
                autocomplete="off"
                class="c10"
                id="main-search-input"
                name="query"
                placeholder="Recherche"
                type="search"
                value=""
              />
              <div
                class="c11"
                id="react-autowhatever-cdtn-documents-suggester"
                role="listbox"
              />
            </div>
          </label>
          <button
            aria-pressed="false"
            class="c12"
            type="submit"
          >
            Rechercher
          </button>
        </form>
      </div>
    </div>
  </div>
  <nav
    class="c13"
  >
    <div
      class="c14"
    >
      <div
        class="c2"
      >
        <ul
          class="c15"
        >
          <li
            class="c16"
          >
            <a
              href="/themes"
              title="Voir le theme Thèmes"
            >
              Thèmes
            </a>
          </li>
          <li
            aria-hidden="true"
            class="c17"
          >
             » 
          </li>
          <li
            class="c16"
          >
            <a
              href="/themes/tag-1"
              title="Voir le theme tag1"
            >
              tag1
            </a>
          </li>
          <li
            aria-hidden="true"
            class="c17"
          >
             » 
          </li>
          <li
            class="c16"
          >
            <a
              href="/themes/tag-2"
              title="Voir le theme tag2"
            >
              tag2
            </a>
          </li>
        </ul>
      </div>
    </div>
  </nav>
  <div
    class="c14"
    data-main-content="true"
  >
    <div
      class="c2"
    >
      <div
        class="c18"
      >
        <div
          class="c14"
        >
          <div
            class="c19 c20"
          >
            <div
              class="c21"
            >
              <svg
                viewBox="0 0 50 50"
              >
                <title>
                  question
                </title>
                <g
                  fill="currentColor"
                  fill-rule="evenodd"
                >
                  <path
                    d="M33.045 30.728a.951.951 0 0 0-.955.946v6.533c0 2.61-2.143 4.733-4.775 4.733H17.003a.951.951 0 0 0-.955.947l-.001 1.882-2.28-2.26a.955.955 0 0 0-.876-.569H6.685c-2.633 0-4.775-2.123-4.775-4.733v-14.58c0-2.61 2.142-4.734 4.775-4.734h9.647a.951.951 0 0 0 .955-.946.951.951 0 0 0-.955-.947H6.685C3 17 0 19.973 0 23.627v14.58c0 3.654 2.999 6.627 6.685 6.627h5.717l3.922 3.889a.96.96 0 0 0 1.04.205.946.946 0 0 0 .59-.874l.003-3.22h9.358C31 44.834 34 41.86 34 38.207v-6.533a.951.951 0 0 0-.955-.946z"
                  />
                  <path
                    d="M35.201 0H32.8C25.189 0 19 6.195 19 13.81s6.19 13.811 13.798 13.811h2.403a13.82 13.82 0 0 0 3.502-.45l3.55 3.551a.949.949 0 0 0 1.62-.672v-5.498a13.942 13.942 0 0 0 3.627-4.475c.995-1.952 1.5-4.06 1.5-6.267C49 6.195 42.81 0 35.201 0zm7.152 23.33a.95.95 0 0 0-.379.76v3.667l-2.323-2.324a.948.948 0 0 0-.95-.236c-1.13.347-2.307.524-3.5.524H32.8c-6.562 0-11.9-5.343-11.9-11.91 0-6.568 5.338-11.91 11.9-11.91H35.2c6.562 0 11.9 5.342 11.9 11.91 0 3.775-1.73 7.245-4.748 9.52z"
                  />
                  <path
                    d="M37.99 10.71a4.005 4.005 0 0 0-3.708-3.7A4 4 0 0 0 30 10.99a.944.944 0 0 0 1.89 0c0-.59.238-1.136.67-1.539a2.099 2.099 0 0 1 1.591-.56 2.109 2.109 0 0 1 1.954 1.948 2.096 2.096 0 0 1-1.641 2.206 1.785 1.785 0 0 0-1.409 1.748v2.264a.944.944 0 0 0 1.89 0V14.87a3.971 3.971 0 0 0 3.045-4.16zM34.707 19.293A1.01 1.01 0 0 0 34 19a1.01 1.01 0 0 0-.707.293A1.008 1.008 0 0 0 33 20c0 .264.107.522.293.708a1.006 1.006 0 0 0 1.414 0A1.01 1.01 0 0 0 35 20c0-.263-.107-.52-.293-.707zM26.048 30H5.952C5.426 30 5 30.448 5 31s.426 1 .952 1h20.096c.526 0 .952-.448.952-1s-.426-1-.952-1zM26.707 35.293A1.007 1.007 0 0 0 26 35c-.263 0-.521.107-.707.293A1.007 1.007 0 0 0 25 36c0 .263.107.521.293.707.186.186.444.293.707.293.263 0 .521-.107.707-.293.186-.186.293-.443.293-.707 0-.263-.107-.521-.293-.707zM23.009 35H5.99A.996.996 0 0 0 5 36c0 .552.444 1 .991 1H23.01A.996.996 0 0 0 24 36c0-.552-.444-1-.991-1zM20.036 25H5.964C5.432 25 5 25.448 5 26s.432 1 .964 1h14.072c.532 0 .964-.448.964-1s-.432-1-.964-1z"
                  />
                </g>
              </svg>
            </div>
            <h1>
              Article du code
            </h1>
            <div
              class="c22"
            >
              <span
                class="c23"
              >
                social groove
              </span>
              <span
                class="c24"
              >
                Mis à jour le : 
                <span
                  class="c25"
                >
                  03/11/1979
                </span>
              </span>
            </div>
            <div
              class="c26"
            />
          </div>
          <div
            class="c19"
          >
            <div
              class="c27 c28"
            >
              intro de l'article
            </div>
            <div>
              <p
                class="test-content"
              >
                Contenu au format 
                <strong>
                  html
                </strong>
              </p>
            </div>
            <div>
              Contenu supplémentaire
            </div>
            <div
              class="c29"
            >
              pied de page
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="c14"
  >
    <div
      class="c30"
    >
      <div
        class="c27"
      >
        <h3
          class="c31"
        >
          Avez-vous trouvé la réponse à votre question ?
        </h3>
        <p
          class="c32"
        >
          <button
            aria-pressed="false"
            class="c33 c34"
          >
            Non
          </button>
          <button
            aria-pressed="false"
            class="c33 c35"
          >
            Oui
          </button>
        </p>
      </div>
    </div>
  </div>
  <div
    class="c36"
  >
    <div
      class="c37"
    >
      <div
        class="c38"
      >
        <svg
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10.29 3.86L1.82 18a2 2 0 0 0 1.71 3h16.94a2 2 0 0 0 1.71-3L13.71 3.86a2 2 0 0 0-3.42 0z"
          />
          <line
            x1="12"
            x2="12"
            y1="9"
            y2="13"
          />
          <line
            x1="12"
            x2="12"
            y1="17"
            y2="17"
          />
        </svg>
      </div>
      <div
        class="c39"
        role="alert"
      >
        Ce site est en cours de construction, la fiabilité des réponses qui s’y trouvent ne sont pas garanties.
        <a
          class="c40"
          href="https://www.legifrance.gouv.fr/affichTexteArticle.do;jsessionid=AE9DCF75DDCF0465784CEE0E7D62729F.tplgfr37s_2?idArticle=JORFARTI000035607420&cidTexte=JORFTEXT000035607388&dateTexte=29990101&categorieLien=id"
          rel="noopener noreferrer"
          target="_blank"
          title="consulter l'ordonance"
        >
          L’ouverture officielle du site
        </a>
        est prévue pour 2020.
      </div>
      <div
        class="c41"
      >
        <button
          aria-label="Fermer"
          aria-pressed="false"
          class="c42"
        >
          <svg
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="18"
              x2="6"
              y1="6"
              y2="18"
            />
            <line
              x1="6"
              x2="18"
              y1="6"
              y2="18"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Answer /> should render tooltip 1`] = `
.c9:not(:focus):not(:active) {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  padding: 0;
  overflow: hidden;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  border: 0;
}

.c2 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
}

.c2 > *:first-child {
  margin-top: 0;
}

.c2 > *:last-child {
  margin-bottom: 0;
}

.c15 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
  padding: 0;
  max-width: 46.25rem;
}

.c15 > *:first-child {
  margin-top: 0;
}

.c15 > *:last-child {
  margin-bottom: 0;
}

.c27 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
  max-width: 46.25rem;
}

.c27 > *:first-child {
  margin-top: 0;
}

.c27 > *:last-child {
  margin-bottom: 0;
}

.c0 {
  padding: 1.25rem 0;
  background-color: #fff;
}

.c13 {
  padding: 1.25rem 0;
}

.c14 {
  padding: 0.625rem 1.25rem;
  color: #434956;
  border-width: 1px;
  border-style: solid;
  border-radius: 0.25rem;
  border-color: #c9d3df;
  background-color: #fff;
}

.c14 > *:first-child {
  margin-top: 0;
}

.c14 > *:last-child {
  margin-bottom: 0;
}

.c23 {
  padding: 0.625rem 1.25rem;
  color: #434956;
  border-width: 1px;
  border-style: solid;
  border-radius: 0.25rem;
  border-color: #c9d3df;
  background-color: #ebeff3;
}

.c23 > *:first-child {
  margin-top: 0;
}

.c23 > *:last-child {
  margin-bottom: 0;
}

.c39 {
  padding: 0.625rem 1rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border-style: solid;
  border-width: 1px 1px 2px 1px;
  border-radius: 0.25rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  padding: 1rem;
  color: #434956;
  line-height: 0;
  border: none;
}

.c39:hover {
  color: #8c94a6;
}

.c39:active {
  position: relative;
  top: 1px;
}

.c34 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-height: 48px;
  width: 100%;
  background-color: white;
  border-style: solid;
  border-width: 1px;
  border-radius: 0.25rem;
  -webkit-animation: iowhYu 0.3s ease-out;
  animation: iowhYu 0.3s ease-out;
  border-color: #fee5ad;
  box-shadow: 0 5px 10px 0 #c9d3df;
}

.c35 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 1rem;
  background-color: #fee5ad;
}

.c36 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding: 1rem;
  color: #434956;
  text-align: left;
}

.c38 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c16 {
  position: relative;
  margin-bottom: 1.25rem;
}

.c17 {
  position: absolute;
  top: 0.625rem;
  left: calc(-80px - 1.25rem);
  width: 80px;
  color: #4c5467;
}

.c18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c19 {
  color: #4c5467;
  font-weight: 600;
}

.c20 {
  margin-left: 1rem;
  color: #53657d;
  font-size: 0.875rem;
  display: inline-block;
}

.c21 {
  color: #4c5467;
  font-weight: 600;
}

.c22 {
  margin-left: -10px;
}

.c33 {
  position: fixed;
  bottom: 0;
  padding: 1rem;
  width: 100%;
  z-index: 1000;
}

.c37 {
  padding: 0 0.25rem;
}

.c8 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-align: left;
}

.c11 ul {
  z-index: 100;
}

.c11 li[role="option"]:nth-child(2n + 1) {
  background: #f5f7fa;
}

.c1 {
  box-shadow: 0 10px 10px -10px #c9d3df;
}

.c4 {
  margin-top: 0;
  font-size: 1.875rem;
  line-height: 1.4;
  color: #006ab2;
}

.c5 {
  font-size: 1rem;
}

.c3 {
  position: relative;
  padding: 1rem 0;
  text-align: center;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0 auto;
  padding: 0;
  position: relative;
  width: 70%;
}

.c7 {
  position: absolute;
  left: 0;
  top: 0;
  margin: 1rem 0 0 1.25rem;
  width: 1.3rem;
  height: 1.3rem;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0;
  padding: 0 1rem 0 4rem;
  width: 100%;
  height: 50px;
  font-size: inherit;
  font-family: inherit;
  color: inherit;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: #f9f9fc;
  border: 1px solid #c9d3df;
  border-radius: 0.25rem;
  -webkit-transition: border 250ms ease;
  transition: border 250ms ease;
}

.c10:focus {
  border-color: #006be6;
  outline: none;
}

.c12 {
  padding: 0.625rem 1rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border-style: solid;
  border-width: 1px 1px 2px 1px;
  border-radius: 0.25rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  color: #fff;
  background: #006be6;
  border-color: #006be6;
  border-bottom-color: #0053b3;
  margin-left: 0.5rem;
}

.c12:not([disabled]):hover,
.c12:not([disabled]):focus {
  background: #07f;
  color: #fff;
}

.c12:not([disabled]):active {
  color: #fff;
  background: #1a85ff;
  border-width: 2px 1px 1px 1px;
  border-color: #006be6;
  outline: none;
}

.c12[aria-pressed="true"] {
  color: #fff;
  background: #07f;
  border-width: 2px 1px 1px 1px;
  border-color: #006be6;
  border-top-color: #0053b3;
  box-shadow: inset 0 1px 2px 0 #0053b3;
}

.c12[aria-pressed="true"]:not([disabled]):hover,
.c12[aria-pressed="true"]:not([disabled]):focus {
  background-color: #006be6;
}

.c12[aria-pressed="true"]:not([disabled]):active {
  border-top-color: #0053b3;
}

.c12[disabled] {
  cursor: not-allowed;
  color: rgba(255,255,255,0.4);
}

.c28 {
  margin-bottom: 1rem;
}

.c29 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
}

.c31 {
  padding: 0.625rem 1rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border-style: solid;
  border-width: 1px 1px 2px 1px;
  border-radius: 0.25rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  color: #0c0c0e;
  background: #eaeaea;
  border-color: #eaeaea;
  border-bottom-color: #d1d1d1;
  min-width: 7rem;
}

.c31:not([disabled]):hover,
.c31:not([disabled]):focus {
  background: #f7f7f7;
  color: #18181c;
}

.c31:not([disabled]):active {
  color: #242429;
  background: #fff;
  border-width: 2px 1px 1px 1px;
  border-color: #eaeaea;
  outline: none;
}

.c31[aria-pressed="true"] {
  color: #18181c;
  background: #f7f7f7;
  border-width: 2px 1px 1px 1px;
  border-color: #eaeaea;
  border-top-color: #d1d1d1;
  box-shadow: inset 0 1px 2px 0 #d1d1d1;
}

.c31[aria-pressed="true"]:not([disabled]):hover,
.c31[aria-pressed="true"]:not([disabled]):focus {
  background-color: #eaeaea;
}

.c31[aria-pressed="true"]:not([disabled]):active {
  border-top-color: #d1d1d1;
}

.c31[disabled] {
  cursor: not-allowed;
  color: rgba(12,12,14,0.4);
}

.c31 + .c30 {
  margin-left: 1rem;
}

.c32 {
  padding: 0.625rem 1rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border-style: solid;
  border-width: 1px 1px 2px 1px;
  border-radius: 0.25rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  color: #fff;
  background: #006be6;
  border-color: #006be6;
  border-bottom-color: #0053b3;
  min-width: 7rem;
}

.c32:not([disabled]):hover,
.c32:not([disabled]):focus {
  background: #07f;
  color: #fff;
}

.c32:not([disabled]):active {
  color: #fff;
  background: #1a85ff;
  border-width: 2px 1px 1px 1px;
  border-color: #006be6;
  outline: none;
}

.c32[aria-pressed="true"] {
  color: #fff;
  background: #07f;
  border-width: 2px 1px 1px 1px;
  border-color: #006be6;
  border-top-color: #0053b3;
  box-shadow: inset 0 1px 2px 0 #0053b3;
}

.c32[aria-pressed="true"]:not([disabled]):hover,
.c32[aria-pressed="true"]:not([disabled]):focus {
  background-color: #006be6;
}

.c32[aria-pressed="true"]:not([disabled]):active {
  border-top-color: #0053b3;
}

.c32[disabled] {
  cursor: not-allowed;
  color: rgba(255,255,255,0.4);
}

.c32 + .c30 {
  margin-left: 1rem;
}

.c24 {
  margin: 1rem auto;
}

.c26 {
  margin-top: 2.5rem;
  padding: 1rem;
  background-color: #f9f9fc;
  border-radius: 0.25rem;
}

.c25 {
  border-bottom: 1px dotted #006be6;
}

@media print {
  .c2 {
    max-width: 100%;
    padding: 0;
  }
}

@media print {
  .c15 {
    max-width: 100%;
    padding: 0;
  }
}

@media print {
  .c27 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:600px) {
  .c14 {
    padding: 0.625rem 1.25rem;
  }
}

@media print {
  .c14 {
    border: none;
    padding: 0 5pt;
  }
}

@media (max-width:600px) {
  .c23 {
    padding: 0.625rem 1.25rem;
  }
}

@media print {
  .c23 {
    border: none;
    padding: 0 5pt;
  }
}

@media (max-width:1200px) {
  .c17 {
    display: none;
  }
}

@media (max-width:600px) {
  .c18 {
    -webkit-flex-flow: column;
    -ms-flex-flow: column;
    flex-flow: column;
    -webkit-align-items: flex-start;
    -webkit-box-align: flex-start;
    -ms-flex-align: flex-start;
    align-items: flex-start;
  }
}

@media (max-width:600px) {
  .c20 {
    margin-left: 0;
  }
}

@media print {
  .c1 {
    display: none;
  }
}

@media (max-width:980px) {
  .c6 {
    width: 100%;
  }
}

@media (max-width:600px) {
  .c6 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    height: auto;
    width: 100%;
  }
}

@media (max-width:600px) {
  .c7 {
    display: none;
  }
}

@media (max-width:600px) {
  .c10 {
    height: 50px;
    padding: 0 1rem;
  }
}

@media (max-width:600px) {
  .c12 {
    margin-left: 0;
    margin-top: 0.625rem;
  }
}

<div>
  <div
    class="c0 c1"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <p
          class="c4"
        >
          Posez votre question sur le droit du travail
          <br />
          <a
            class="c5"
            href="/droit-du-travail"
          >
            Le droit du travail, c‘est quoi ?
          </a>
        </p>
        <form
          class="c6"
        >
          <svg
            class="c7"
            viewBox="0 0 20 20"
          >
            <title />
            <path
              d="M17.876 8.939c0 2.197-.819 4.208-2.123 5.773l4.023 4.022a.72.72 0 0 1 0 1.043.735.735 0 0 1-.522.223.736.736 0 0 1-.52-.223l-4.023-4.023a8.813 8.813 0 0 1-5.772 2.123C4.022 17.877 0 13.855 0 8.939 0 4.022 4.023 0 8.939 0c4.915 0 8.937 4.023 8.937 8.939zM9.001 16.5c4.124 0 7.499-3.375 7.499-7.5S13.125 1.5 9 1.5C4.877 1.5 1.5 4.875 1.5 9s3.376 7.5 7.5 7.5z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
          <label
            class="c8"
            for="main-search-input"
          >
            <span
              class="c9"
            >
              Rechercher
            </span>
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-owns="react-autowhatever-cdtn-documents-suggester"
              role="combobox"
              style="flex: 1;"
            >
              <input
                aria-autocomplete="list"
                aria-controls="react-autowhatever-cdtn-documents-suggester"
                autocomplete="off"
                class="c10"
                id="main-search-input"
                name="query"
                placeholder="Recherche"
                type="search"
                value=""
              />
              <div
                class="c11"
                id="react-autowhatever-cdtn-documents-suggester"
                role="listbox"
              />
            </div>
          </label>
          <button
            aria-pressed="false"
            class="c12"
            type="submit"
          >
            Rechercher
          </button>
        </form>
      </div>
    </div>
  </div>
  <div
    class="c13"
    data-main-content="true"
  >
    <div
      class="c2"
    >
      <div
        class="c14"
      >
        <div
          class="c13"
        >
          <div
            class="c15 c16"
          >
            <div
              class="c17"
            >
              <svg
                viewBox="0 0 50 50"
              >
                <title>
                  question
                </title>
                <g
                  fill="currentColor"
                  fill-rule="evenodd"
                >
                  <path
                    d="M33.045 30.728a.951.951 0 0 0-.955.946v6.533c0 2.61-2.143 4.733-4.775 4.733H17.003a.951.951 0 0 0-.955.947l-.001 1.882-2.28-2.26a.955.955 0 0 0-.876-.569H6.685c-2.633 0-4.775-2.123-4.775-4.733v-14.58c0-2.61 2.142-4.734 4.775-4.734h9.647a.951.951 0 0 0 .955-.946.951.951 0 0 0-.955-.947H6.685C3 17 0 19.973 0 23.627v14.58c0 3.654 2.999 6.627 6.685 6.627h5.717l3.922 3.889a.96.96 0 0 0 1.04.205.946.946 0 0 0 .59-.874l.003-3.22h9.358C31 44.834 34 41.86 34 38.207v-6.533a.951.951 0 0 0-.955-.946z"
                  />
                  <path
                    d="M35.201 0H32.8C25.189 0 19 6.195 19 13.81s6.19 13.811 13.798 13.811h2.403a13.82 13.82 0 0 0 3.502-.45l3.55 3.551a.949.949 0 0 0 1.62-.672v-5.498a13.942 13.942 0 0 0 3.627-4.475c.995-1.952 1.5-4.06 1.5-6.267C49 6.195 42.81 0 35.201 0zm7.152 23.33a.95.95 0 0 0-.379.76v3.667l-2.323-2.324a.948.948 0 0 0-.95-.236c-1.13.347-2.307.524-3.5.524H32.8c-6.562 0-11.9-5.343-11.9-11.91 0-6.568 5.338-11.91 11.9-11.91H35.2c6.562 0 11.9 5.342 11.9 11.91 0 3.775-1.73 7.245-4.748 9.52z"
                  />
                  <path
                    d="M37.99 10.71a4.005 4.005 0 0 0-3.708-3.7A4 4 0 0 0 30 10.99a.944.944 0 0 0 1.89 0c0-.59.238-1.136.67-1.539a2.099 2.099 0 0 1 1.591-.56 2.109 2.109 0 0 1 1.954 1.948 2.096 2.096 0 0 1-1.641 2.206 1.785 1.785 0 0 0-1.409 1.748v2.264a.944.944 0 0 0 1.89 0V14.87a3.971 3.971 0 0 0 3.045-4.16zM34.707 19.293A1.01 1.01 0 0 0 34 19a1.01 1.01 0 0 0-.707.293A1.008 1.008 0 0 0 33 20c0 .264.107.522.293.708a1.006 1.006 0 0 0 1.414 0A1.01 1.01 0 0 0 35 20c0-.263-.107-.52-.293-.707zM26.048 30H5.952C5.426 30 5 30.448 5 31s.426 1 .952 1h20.096c.526 0 .952-.448.952-1s-.426-1-.952-1zM26.707 35.293A1.007 1.007 0 0 0 26 35c-.263 0-.521.107-.707.293A1.007 1.007 0 0 0 25 36c0 .263.107.521.293.707.186.186.444.293.707.293.263 0 .521-.107.707-.293.186-.186.293-.443.293-.707 0-.263-.107-.521-.293-.707zM23.009 35H5.99A.996.996 0 0 0 5 36c0 .552.444 1 .991 1H23.01A.996.996 0 0 0 24 36c0-.552-.444-1-.991-1zM20.036 25H5.964C5.432 25 5 25.448 5 26s.432 1 .964 1h14.072c.532 0 .964-.448.964-1s-.432-1-.964-1z"
                  />
                </g>
              </svg>
            </div>
            <h1>
              Article du code
            </h1>
            <div
              class="c18"
            >
              <span
                class="c19"
              >
                social groove
              </span>
              <span
                class="c20"
              >
                Mis à jour le : 
                <span
                  class="c21"
                >
                  03/11/1979
                </span>
              </span>
            </div>
            <div
              class="c22"
            />
          </div>
          <div
            class="c15"
          >
            <div
              class="c23 c24"
            >
              intro de l'article
            </div>
            <div>
              <p
                class="test-content"
              >
                Contenu au format 
                <strong>
                  html
                </strong>
                 contenant des tooltip sur certains mot comme 
                <span
                  data-tooltip-slug="rescrit"
                  data-tooltip-term="rescrit"
                >
                  <span
                    aria-describedby="tooltip:1"
                    class="c25"
                    data-reach-tooltip-trigger=""
                  >
                    rescrit
                  </span>
                </span>
                . match aussi les abbréviation comme 
                <span
                  data-tooltip-slug="activite-principale-exercee"
                  data-tooltip-term="APE"
                >
                  <span
                    aria-describedby="tooltip:2"
                    class="c25"
                    data-reach-tooltip-trigger=""
                  >
                    APE
                  </span>
                </span>
                 mais pas ape ou ses variantes comme 
                <span
                  data-tooltip-slug="activite-principale-exercee"
                  data-tooltip-term="code ape"
                >
                  <span
                    aria-describedby="tooltip:3"
                    class="c25"
                    data-reach-tooltip-trigger=""
                  >
                    code ape
                  </span>
                </span>
              </p>
            </div>
            <div>
              Contenu supplémentaire
            </div>
            <div
              class="c26"
            >
              pied de page
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="c13"
  >
    <div
      class="c27"
    >
      <div
        class="c23"
      >
        <h3
          class="c28"
        >
          Avez-vous trouvé la réponse à votre question ?
        </h3>
        <p
          class="c29"
        >
          <button
            aria-pressed="false"
            class="c30 c31"
          >
            Non
          </button>
          <button
            aria-pressed="false"
            class="c30 c32"
          >
            Oui
          </button>
        </p>
      </div>
    </div>
  </div>
  <div
    class="c33"
  >
    <div
      class="c34"
    >
      <div
        class="c35"
      >
        <svg
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10.29 3.86L1.82 18a2 2 0 0 0 1.71 3h16.94a2 2 0 0 0 1.71-3L13.71 3.86a2 2 0 0 0-3.42 0z"
          />
          <line
            x1="12"
            x2="12"
            y1="9"
            y2="13"
          />
          <line
            x1="12"
            x2="12"
            y1="17"
            y2="17"
          />
        </svg>
      </div>
      <div
        class="c36"
        role="alert"
      >
        Ce site est en cours de construction, la fiabilité des réponses qui s’y trouvent ne sont pas garanties.
        <a
          class="c37"
          href="https://www.legifrance.gouv.fr/affichTexteArticle.do;jsessionid=AE9DCF75DDCF0465784CEE0E7D62729F.tplgfr37s_2?idArticle=JORFARTI000035607420&cidTexte=JORFTEXT000035607388&dateTexte=29990101&categorieLien=id"
          rel="noopener noreferrer"
          target="_blank"
          title="consulter l'ordonance"
        >
          L’ouverture officielle du site
        </a>
        est prévue pour 2020.
      </div>
      <div
        class="c38"
      >
        <button
          aria-label="Fermer"
          aria-pressed="false"
          class="c39"
        >
          <svg
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="18"
              x2="6"
              y1="6"
              y2="18"
            />
            <line
              x1="6"
              x2="18"
              y1="6"
              y2="18"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;
